--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="project-item">
             <div class="project-image-container">
                 <img class="project-image-thumbnail" src="./imgs/project2.png" alt="project2 Pic" />
-                <a href=""><button class="generic-button">View Project</button></a>
+                <a href="https://github.com/NimaHagh/Cooking_Website"><button class="generic-button">View Project</button></a>
             </div>
             <div class="content-section-text">
                 <h3 class="project-title">Cooking Website</h3>
@@ -152,7 +152,7 @@
                 <a href="https://github.com/NimaHagh/TicTacToe.git"><button class="generic-button">View Project</button></a>
             </div>
             <div class="content-section-text">
-                <h3 class="project-title">Cooking Website</h3>
+                <h3 class="project-title">Tic Tac Toe</h3>
              
                 <ul>
 
